<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/fullscreen_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/generated_image_desc"
        android:scaleType="fitCenter" />

    <!-- Save button - bottom left -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_save_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/spacing_md"
        android:contentDescription="@string/save_image"
        app:icon="@drawable/ic_save"
        app:iconSize="24dp"
        app:iconTint="@color/white" />

    <!-- Close button - bottom right -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_close_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_md"
        android:contentDescription="@string/close"
        app:icon="@drawable/ic_close"
        app:iconSize="24dp"
        app:iconTint="@color/white" />

</FrameLayout>
